Adicionando link para cadastrar instituição

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,9 @@
                 <li class="nav-item {% if active_tab == 'contato' %}active{% endif %}">
                   <a class="nav-link fonte-menu mr-5" href="/contato">Contato</a>
                 </li>
+                <li class="nav-item {% if active_tab == 'cadastro' %}active{% endif %}">
+                  <a class="nav-link fonte-menu mr-5" href="/cadastro">Cadastre sua instituição</a>
+                </li>
                 {% if mostrar_categorias %}
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle fonte-menu" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
