--- a/templates/contato.html
+++ b/templates/contato.html
@@ -34,7 +34,7 @@
                             <div class="col-md-6">
                                 <div class="md-form mb-0">
                                     <label for="nome" class="">Seu nome</label>
-                                    <input type="text" id="nome" name="nome" class="form-control" required>
+                                    <input type="text" id="nome" name="nome" class="form-control" aria-label="Informe o seu nome" required>
                                 </div>
                             </div>
                             <!--Grid column-->
@@ -43,7 +43,7 @@
                             <div class="col-md-6">
                                 <div class="md-form mb-0">
                                     <label for="email" class="">Seu e-mail</label>
-                                    <input type="email" id="email" name="email" class="form-control" required placeholder="example@example.com">
+                                    <input type="email" id="email" name="email" class="form-control" aria-label="Informe o seu e-mail" required placeholder="example@example.com">
                                 </div>
                             </div>
                             <!--Grid column-->
@@ -56,7 +56,7 @@
                             <div class="col-md-12">
                                 <div class="md-form mt-3">
                                     <label for="assunto" class="">Assunto</label>
-                                    <input type="text" id="assunto" name="assunto" class="form-control" required>
+                                    <input type="text" id="assunto" name="assunto" class="form-control" aria-label="Informe o assunto do e-mail" required>
                                 </div>
                             </div>
                         </div>
@@ -70,7 +70,7 @@
 
                                 <div class="md-form mt-3">
                                     <label for="mensagem" class="">Sua mensagem</label>
-                                    <textarea type="text" id="mensagem" name="mensagem" rows="2" class="form-control md-textarea" maxlength="1000" required></textarea>
+                                    <textarea type="text" id="mensagem" name="mensagem" rows="2" class="form-control md-textarea" aria-label="Informe a mensagem do e-mail" maxlength="1000" required></textarea>
                                 </div>
 
                             </div>
