--- a/templates/contato.html
+++ b/templates/contato.html
@@ -78,7 +78,7 @@
                         <!--Grid row-->
 
                         <div class="text-center text-md-left mt-3">
-                            <input type="submit" class="btn btn-primary" value="Enviar" style="background-color: orange; border: none;" />
+                            <input type="submit" class="btn btn-primary" value="Enviar" style="background-color: #ffebcc; border: none; color: rgba(0,0,0,.9); font-weight: 700;" />
                         <div id="status"></div>
 
                     </form>
