Removendo font-weight

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -234,7 +234,7 @@
                         </div>
 
                         <div class="text-center text-md-left mt-3">
-                            <input type="submit" class="btn btn-primary" value="Enviar" style="background-color: #ffa500; border: none; color: rgba(0,0,0,.9); font-weight: 700;" />
+                            <input type="submit" class="btn btn-primary" value="Enviar" style="background-color: #ffa500; border: none; color: rgba(0,0,0,.9);" />
                         <div id="status"></div>
 
                     </form>
