--- a/templates/instituicoes.html
+++ b/templates/instituicoes.html
@@ -21,7 +21,7 @@
                     <h5 class="card-title">{{instituicao['name']}}</h5>
                     <p class="card-text" style="text-align: justify;">{{instituicao['description']}}</p>
                     {% if instituicao['contact']['site'] %}
-                        <a href="{{instituicao['contact']['site']}}" class="btn btn-primary" target="_blank" rel="nofollow" style="background-color: #ffa500; color: rgba(0,0,0,.9);">Visite nosso site!</a>
+                        <a href="{{instituicao['contact']['site']}}" class="btn btn-primary" target="_blank" rel="nofollow" style="background-color: #ffa500; color: rgba(0,0,0,.9); border: none;">Visite nosso site!</a>
                     {% endif %}
                     <div class="redes-sociais mb-4">
                         {% if instituicao['contact']['facebook'] %}
