--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
               {% if mostrar_categorias %}
                 <form class="form-inline my-2 my-lg-0">
                   <input class="form-control mr-sm-2" type="search" value="{{nome or ''}}" name="nome" placeholder="Pesquisar" aria-label="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar
+                  <button class="btn my-2 my-sm-0" type="submit" style="background: #28a745; color: #fff;">Pesquisar
                   </button>
                 </form>
               {% endif %}
