--- a/templates/home.html
+++ b/templates/home.html
@@ -20,8 +20,8 @@
               </a>
             {% endif %}
             <div class="carousel-caption d-none d-md-block">
-              <h5 class= "text-dark" aria-label="{{img['name']}}">{{img['name']}}</h5>
-              <p aria-label="{{img['name']}}"></p>
+              <h5 class="text-dark" aria-label="{{img['name']}}">{{img['name']}}</h5>
+              <p aria-label="{{img['name']}}">{{img['name']}}</p>
             </div>       
           </div>
         {% endfor %}
