--- a/templates/home.html
+++ b/templates/home.html
@@ -19,10 +19,10 @@
                 <img src="{{img['src']}}" class="d-block w-100" alt="..." style="max-height: 300px; max-width: 300px;">
               </a>
             {% endif %}
-            <div class="carousel-caption d-none d-md-block">
+            {% comment %} <div class="carousel-caption d-none d-md-block">
               <h5 class="text-dark" aria-label="Clique para para filtrar as instituições da categoria {{img['categoria_id']}}"></h5>
               <p aria-label="Texto da categoria {{img['categoria_id']}}"></p>
-            </div>       
+            </div>        {% endcomment %}
           </div>
         {% endfor %}
       </div>
