Alterando url do serviço de cep

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -276,7 +276,7 @@
             return;
         }
 
-        var url = 'http://viacep.com.br/ws/' + cepApenasNumeros + '/json/';
+        var url = 'https://viacep.com.br/ws/' + cepApenasNumeros + '/json/';
 
         fetch(url)
             .then(function(resposta) {
