Adicionando tag Google Analytics

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-26YLNKB7XF"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-26YLNKB7XF');
+    </script>
+
     <body>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top cor-fundo-laranja">
           <!-- <span class="navbar-brand mb-0 h1">Menu</span> -->
